@@ -1,3 +1,8 @@
+2012-09-09  Paul Smith  <psmith@gnu.org>
+
+	* scripts/targets/POSIX: Add tests for default macro values as
+	specified by IEEE Std 1003.1-2008.  See Savannah bug #37069.
+
 2012-03-04  Paul Smith  <psmith@gnu.org>
 
 	* scripts/features/se_explicit: Test $(x:%=%) format in secondary
