@@ -1,3 +1,8 @@
+2012-09-09  Paul Smith  <psmith@gnu.org>
+
+	* read.c (record_files): Reset the default macro values if .POSIX
+	is set.  Fixes Savannah bug #37069.
+
 2012-09-01  Eli Zaretskii  <eliz@gnu.org>
 
 	* README.W32.template: Update for job-server and Guile support.
